# grab

./: .gitignore  README.md  install.sh  pyproject.toml
extras/: setup-workspace.sh
skill/: SKILL.md
src/grab/: __init__.py  __main__.py  cli.py  downloader.py  history.py  instagram.py  markdown.py  mcp_server.py  platform.py
